# attesta

./: .gitignore  ADDRESS_CONVERSION_SUMMARY.md  DEMO_VIDEO_SCRIPT.md  INTEGRATION_STATUS.md  LICENSE  README.md
backend/icp/: Cargo.toml  README.md  deploy.sh  dfx.json  start-dfx.sh
backend/icp/canisters/agreement_manager/: Cargo.toml  agreement_manager.did
backend/icp/canisters/agreement_manager/src/: lib.rs  storage.rs  types.rs
backend/icp/canisters/proof_vault/: Cargo.toml  proof_vault.did
frontend/: .env.example  .npmrc  .pnpmfile.cjs  NETWORK_ACCESS.md  README.md  WALLET_INTEGRATION.md  hardhat.config.ts  multi-party-signing.md  next.config.js  nexusdocs.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/contracts/: AttestaCertificate.sol
frontend/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  USER_GUIDE.md
frontend/scripts/: deploy.js
frontend/src/: global.d.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx
frontend/src/app/(public)/: page.tsx
frontend/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/src/components/dashboard/: AgreementCard.tsx  ConstellationStatus.tsx  EmptyState.tsx  QuickActions.tsx  StatsCard.tsx
frontend/src/components/landing/: CTASection.tsx  FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  TechStackSection.tsx  UseCasesSection.tsx
frontend/src/lib/: polyfills.ts
frontend/typechain-types/: hardhat.d.ts  index.ts
frontend/typechain-types/contracts/: AttestaCertificate.ts  index.ts
(+71 files in other folders)
